<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#673AB7">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#673AB7"
        android:layout_gravity="top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculo_imc"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:padding="10dp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imc"
            android:textSize="50sp"
            android:layout_margin="20dp">
        </TextView>
        <RadioGroup
            android:id="@+id/rg_grupo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <RadioButton
                android:id="@+id/rbn_calcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calcular_imc"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbn_informacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mas_informacion" />
        </RadioGroup>
        <Button
            android:id="@+id/btn_vacio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="">
        </Button>

    </LinearLayout>

</LinearLayout>